; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/net/extr_if_cue.c_cue_reset.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/net/extr_if_cue.c_cue_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cue_softc = type { i32 }
%struct.usb_device_request = type { i32, i32, i32, i32, i32 }

@UT_WRITE_VENDOR_DEVICE = common dso_local global i32 0, align 4
@CUE_CMD_RESET = common dso_local global i32 0, align 4
@hz = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cue_softc*)* @cue_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cue_reset(%struct.cue_softc* %0) #0 {
  %2 = alloca %struct.cue_softc*, align 8
  %3 = alloca %struct.usb_device_request, align 4
  store %struct.cue_softc* %0, %struct.cue_softc** %2, align 8
  %4 = load i32, i32* @UT_WRITE_VENDOR_DEVICE, align 4
  %5 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %3, i32 0, i32 4
  store i32 %4, i32* %5, align 4
  %6 = load i32, i32* @CUE_CMD_RESET, align 4
  %7 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %3, i32 0, i32 3
  store i32 %6, i32* %7, align 4
  %8 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %3, i32 0, i32 2
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @USETW(i32 %9, i32 0)
  %11 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %3, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @USETW(i32 %12, i32 0)
  %14 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %3, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @USETW(i32 %15, i32 0)
  %17 = load %struct.cue_softc*, %struct.cue_softc** %2, align 8
  %18 = getelementptr inbounds %struct.cue_softc, %struct.cue_softc* %17, i32 0, i32 0
  %19 = call i64 @uether_do_request(i32* %18, %struct.usb_device_request* %3, i32* null, i32 1000)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %1
  br label %22

22:                                               ; preds = %21, %1
  %23 = load %struct.cue_softc*, %struct.cue_softc** %2, align 8
  %24 = getelementptr inbounds %struct.cue_softc, %struct.cue_softc* %23, i32 0, i32 0
  %25 = load i32, i32* @hz, align 4
  %26 = sdiv i32 %25, 100
  %27 = call i32 @uether_pause(i32* %24, i32 %26)
  ret void
}

declare dso_local i32 @USETW(i32, i32) #1

declare dso_local i64 @uether_do_request(i32*, %struct.usb_device_request*, i32*, i32) #1

declare dso_local i32 @uether_pause(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
